Fixing bottom spacing

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -59,7 +59,8 @@
   font-size: 2rem;
   line-height: 4rem;
   font-weight: 700;
-  margin: 5rem 0 0 0; // Only bottom margin removed, top margin remains for gap above
+  margin-top: 5rem;
+  margin-bottom: 0;
   color: white;
   border-top: 0.4rem solid $color-pink;
   border-bottom: 0.4rem solid $color-pink;
